<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLavender"
    tools:context="com.example.elena.lab2_1.MainActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent">

        <TableRow
            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/tvInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/try_to_guess"
                android:textSize="23sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_span="2"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/etChoice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:textSize="20sp"
                android:ems="10"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvError"
                android:layout_width="221dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorMaroon" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/btEnter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_value"
                android:textColor="@color/colorPrimaryDark"
                android:onClick="onClickEnter"/>

            <Button
                android:id="@+id/btRestart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restart"
                android:textColor="@color/colorPrimaryDark"
                android:onClick="onClickRestart"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/tvTries"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/number_attempts"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/tvRecord"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/record"
                android:textSize="15sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <Button
                android:id="@+id/btReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/reset"
                android:textColor="@color/colorPrimaryDark"
                android:onClick="onClickReset"/>
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>
